[package]
name = "gpgfs-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env", "cargo"] }
env_logger = "0.10.1"
fuser = "0.14.0"
libc = "0.2.151"
