[package]
name = "gpgfs-rust"
authors = ["Andreas Mausch"]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env", "cargo"] }
env_logger = "0.10.1"
fuse_mt = "0.6.1"
gpgme = "0.11.0"
libc = "0.2.151"
log = "0.4.20"

[dev-dependencies]
assertor = "0.0.2"
pretty_assertions = "1.4.0"
temp-dir = "0.1.12"
